[package]
name = "pokemon-cli"
version = "0.1.0"
edition = "2018"
authors = ['Steven Dirth']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"]}
clap = "2.33.3"